--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,16 @@
     <string name="edit_text_hint">What needs to be done…</string>
     <string name="add_task_button">Add task</string>
 
+    <!-- Network info -->
+    <string name="sync_error"> Synchronization error</string>
+    <string name="auth_error"> Authorization error</string>
+    <string name="no_element_error"> No such element on a server</string>
+    <string name="server_error"> Server error</string>
+    <string name="retry_snackbar"> Retry </string>
+    <string name="internet_found"> Connected to the internet </string>
+    <string name="internet_not_found"> No internet connection </string>
+
+
     <string-array name="priorities">
         <item>Default</item>
         <item>Low</item>
