Add Theme selection

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,6 +20,7 @@
     <string name="add_task_button">Добавить дело</string>
 
     <!-- Network info -->
+    <string name="choose_theme">Выберите тему приложения:</string>
     <string name="sync_error">Ошибка синхронизации</string>
     <string name="auth_error">Ошибка авторизации</string>
     <string name="no_element_error">Элемент не найден на сервере</string>
@@ -47,4 +48,7 @@
         <item>октября</item>
         <item>ноября</item>
     </string-array>
+    <string name="light_mode">Светлая</string>
+    <string name="dark_mode">Темная</string>
+    <string name="system_mode">Системная</string>
 </resources>
