Add restore snackbar

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -51,4 +51,6 @@
     <string name="light_mode">Светлая</string>
     <string name="dark_mode">Темная</string>
     <string name="system_mode">Системная</string>
+    <string name="restore_button">Восстановить</string>
+    <string name="snackbar_delete_text">"Удалено дело "</string>
 </resources>
