--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -54,4 +54,5 @@
     <string name="system_mode">Системная</string>
     <string name="restore_button">Восстановить</string>
     <string name="snackbar_delete_text">"Удалено дело "</string>
+    <string name="notifications_disabled">Уведомления отключены</string>
 </resources>
